--- a/index.html
+++ b/index.html
@@ -12,56 +12,57 @@
     <!-- Enlace a los scripts de los ejercicios -->
     
     <!-- Nivel 1: Fundamentos -->
-    <script src="js/ejercicio1.js"></script> <!-- Variables y tipos de datos -->
-    <script src="js/ejercicio2.js"></script> <!-- Operaciones matemáticas -->
-    <script src="js/ejercicio3.js"></script> <!-- Concatenación de cadenas -->
-    <script src="js/ejercicio4.js"></script> <!-- Condicionales -->
-    <script src="js/ejercicio5.js"></script> <!-- Comparaciones -->
-    <script src="js/ejercicio6.js"></script> <!-- Ciclos for -->
-    <script src="js/ejercicio7.js"></script> <!-- Ciclo while -->
-    <script src="js/ejercicio8.js"></script> <!-- Ciclo for y suma -->
-    <script src="js/ejercicio9.js"></script> <!-- Arrays básicos -->
-    <script src="js/ejercicio10.js"></script> <!-- Acceder a un array -->
+    <script src="JS/ejercicio1.js"></script> <!-- Variables y tipos de datos -->
+    <script src="JS/ejercicio2.js"></script> <!-- Operaciones matemáticas -->
+    <script src="JS/ejercicio3.js"></script> <!-- Concatenación de cadenas -->
+    <script src="JS/ejercicio4.js"></script> <!-- Condicionales -->
+    <script src="JS/ejercicio5.js"></script> <!-- Comparaciones -->
+    <script src="JS/ejercicio6.js"></script> <!-- Ciclos for -->
+    <script src="JS/ejercicio7.js"></script> <!-- Ciclo while -->
+    <script src="JS/ejercicio8.js"></script> <!-- Ciclo for y suma -->
+    <script src="JS/ejercicio9.js"></script> <!-- Arrays básicos -->
+    <script src="JS/ejercicio10.js"></script> <!-- Acceder a un array -->
 
     <!-- Nivel 2: Interacción con el usuario -->
-    <script src="js/ejercicio11.js"></script> <!-- Entrada de usuario -->
-    <script src="js/ejercicio12.js"></script> <!-- Verificación de edad -->
-    <script src="js/ejercicio13.js"></script> <!-- Número par o impar -->
-    <script src="js/ejercicio14.js"></script> <!-- Conversión de temperaturas -->
-    <script src="js/ejercicio15.js"></script> <!-- Validación de entrada -->
-    <script src="js/ejercicio16.js"></script> <!-- Palíndromos -->
+    <script src="JS/ejercicio11.js"></script> <!-- Entrada de usuario -->
+    <script src="JS/ejercicio12.js"></script> <!-- Verificación de edad -->
+    <script src="JS/ejercicio13.js"></script> <!-- Número par o impar -->
+    <script src="JS/ejercicio14.js"></script> <!-- Conversión de temperaturas -->
+    <script src="JS/ejercicio15.js"></script> <!-- Validación de entrada -->
+    <script src="JS/ejercicio16.js"></script> <!-- Palíndromos -->
 
     <!-- Nivel 3: Manipulación de arrays y objetos -->
-    <script src="js/ejercicio17.js"></script> <!-- Array invertido -->
-    <script src="js/ejercicio18.js"></script> <!-- Suma de elementos de un array -->
-    <script src="js/ejercicio19.js"></script> <!-- Array de números pares -->
-    <script src="js/ejercicio20.js"></script> <!-- Objetos básicos -->
-    <script src="js/ejercicio21.js"></script> <!-- Modificar propiedades de un objeto -->
-    <script src="js/ejercicio22.js"></script> <!-- Buscar en un array -->
-    <script src="js/ejercicio23.js"></script> <!-- Agregar y eliminar elementos en arrays -->
+    <script src="JS/ejercicio17.js"></script> <!-- Array invertido -->
+    <script src="JS/ejercicio18.js"></script> <!-- Suma de elementos de un array -->
+    <script src="JS/ejercicio19.js"></script> <!-- Array de números pares -->
+    <script src="JS/ejercicio20.js"></script> <!-- Objetos básicos -->
+    <script src="JS/ejercicio21.js"></script> <!-- Modificar propiedades de un objeto -->
+    <script src="JS/ejercicio22.js"></script> <!-- Buscar en un array -->
+    <script src="JS/ejercicio23.js"></script> <!-- Agregar y eliminar elementos en arrays -->
 
     <!-- Nivel 4: Funciones -->
-    <script src="js/ejercicio24.js"></script> <!-- Funciones básicas -->
-    <script src="js/ejercicio25.js"></script> <!-- Funciones y condicionales -->
-    <script src="js/ejercicio26.js"></script> <!-- Factorial -->
-    <script src="js/ejercicio27.js"></script> <!-- Promedio de un array -->
-    <script src="js/ejercicio28.js"></script> <!-- Máximo y mínimo en un array -->
-    <script src="js/ejercicio29.js"></script> <!-- Contar vocales -->
+    <script src="JS/ejercicio24.js"></script> <!-- Funciones básicas -->
+    <script src="JS/ejercicio25.js"></script> <!-- Funciones y condicionales -->
+    <script src="JS/ejercicio26.js"></script> <!-- Factorial -->
+    <script src="JS/ejercicio27.js"></script> <!-- Promedio de un array -->
+    <script src="JS/ejercicio28.js"></script> <!-- Máximo y mínimo en un array -->
+    <script src="JS/ejercicio29.js"></script> <!-- Contar vocales -->
 
     <!-- Nivel 5: Temas intermedios -->
-    <script src="js/ejercicio30.js"></script> <!-- Funciones anónimas -->
-    <script src="js/ejercicio31.js"></script> <!-- Callbacks -->
-    <script src="js/ejercicio32.js"></script> <!-- Funciones flecha -->
-    <script src="js/ejercicio33.js"></script> <!-- Clases básicas -->
-    <script src="js/ejercicio34.js"></script> <!-- Herencia -->
-    <script src="js/ejercicio35.js"></script> <!-- Objetos y métodos -->
+    <script src="JS/ejercicio30.js"></script> <!-- Funciones anónimas -->
+    <script src="JS/ejercicio31.js"></script> <!-- Callbacks -->
+    <script src="JS/ejercicio32.js"></script> <!-- Funciones flecha -->
+    <script src="JS/ejercicio33.js"></script> <!-- Clases básicas -->
+    <script src="JS/ejercicio34.js"></script> <!-- Herencia -->
+    <script src="JS/ejercicio35.js"></script> <!-- Objetos y métodos -->
 
     <!-- Nivel 6: Manejo del DOM -->
-    <script src="js/ejercicio36.js"></script> <!-- Manipulación del DOM -->
-    <script src="js/ejercicio37.js"></script> <!-- Crear elementos en el DOM -->
-    <script src="js/ejercicio38.js"></script> <!-- Eliminar elementos del DOM -->
-    <script src="js/ejercicio39.js"></script> <!-- Eventos -->
-    <script src="js/ejercicio40.js"></script> <!-- Formularios -->
+    <script src="JS/ejercicio36.js"></script> <!-- Manipulación del DOM -->
+    <script src="JS/ejercicio37.js"></script> <!-- Crear elementos en el DOM -->
+    <script src="JS/ejercicio38.js"></script> <!-- Eliminar elementos del DOM -->
+    <script src="JS/ejercicio39.js"></script> <!-- Eventos -->
+    <script src="JS/ejercicio40.js"></script> <!-- Formularios -->
 
 </body>
 </html>
+
